Ready for lecture

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </form>
 
   <div class="hotels-list">
-    <!--article class="hotel" style="background: url('img/hotel-1.jpg')">
+    <article class="hotel" style="background: url('img/hotel-1.jpg')">
       <span class="hotel-stars hotel-stars-four"></span>
       <h3 class="hotel-name">Radisson Blu Alcron Hotel</h3>
       <div class="hotel-distance"><span class="hotel-distance-kilometers">500м</span> до центра</div>
@@ -147,7 +147,7 @@
         <li class="hotel-amenity hotel-amenity-parking" title="Парковка">Парковка</li>
       </ul>
       <a href="#" class="hotel-price">8400&nbsp;<span class="rouble">руб.</span></a>
-    </article-->
+    </article>
   </div>
 </main>
 
@@ -168,10 +168,6 @@
     <a href="#" class="hotel-price"><span class="hotel-price-value">9700</span>&nbsp;<span class="rouble">руб.</span></a>
   </article>
 </template>
-
-<script src="js/cookies.js"></script>
-<script src="js/form-validation.js"></script>
-<!-- <script src="js/hotels-list.js"></script> -->
 
 </body>
 </html>
